--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,6 +36,21 @@
     </table>
     <a type="button" class="btn btn-primary" href="/write">글 작성</a>
 </div>
+<!-- 페이지의 수가 1보다 클 때만-->
+<ul class="pagination justify-content-center" th:if="${list.totalPages > 1}">
+    <li class="page-item">
+        <!-- 첫번째 페이지를 가르킬 땐 -->
+        <a class="page-link" th:href="@{/(page=${list.pageable.pageNumber - 1})}" th:if="${list.getPageable().getPageNumber()} != 0">&laquo;</a>
+    </li>
+    <!-- 존재하는 페이지 만큼 표시하고, 해당 페이지를 가르킬 때 class 를 active 로 변경 -->
+    <li class="page-item" th:each="page : ${#numbers.sequence(startPage, endPage)}">
+        <a class="page-link" th:href="@{/(page=${page - 1})}" th:text="${page}" th:classappend="${page == list.pageable.pageNumber+1} ? 'active'"}></a>
+    </li>
+    <li class="page-item">
+        <!-- 마지막 페이지를 가르킬땐 안보이게-->
+        <a class="page-link" th:href="@{/(page=${list.pageable.pageNumber + 1})}" th:if="${list.getPageable().getPageNumber()} != ${list.getTotalPages()} - 1">&raquo;</a>
+    </li>
+</ul>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
