--- a/src/main/resources/templates/updateForm.html
+++ b/src/main/resources/templates/updateForm.html
@@ -12,15 +12,16 @@
 
 </div>
 <div class="container">
-    <input class="form-control"  id="title" name="title" readonly required th:value="${post.title}"/>
+    <form th:action="|@{/posts/{postId}/update(postId=${post.id})}|" method="post">
+        <input class="form-control" placeholder="제목을 입력하세요." id="title" name="title" required th:value="${post.title}"/>
     <br>
     <label for="content">내용</label>
-        <textarea class="form-control" id="content" name="content" style="height: 300px; resize: none" readonly required th:text="${post.content}"></textarea>
+        <textarea class="form-control" placeholder="내용을 입력하세요." id="content" name="content" style="height: 300px; resize: none" required th:text="${post.content}"></textarea>
     <br>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <button class="btn btn-danger position-relative" th:onclick="|location.href='@{/posts/{postId}/delete(postId=${post.id})}'|">글 삭제</button>
-        <button class="btn btn-primary position-relative" th:onclick="|location.href='@{/posts/{postId}/update(postId=${post.id})}'|">글 수정</button>
+        <input type="submit" class="btn btn-primary position-relative" value="글 수정"/>
     </div>
+    </form>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
