feat : 스프링 시큐리티 기능 추가
글 작성, 상세 조회 시 로그인
회원 가입시 비밀번호 암호화후 저장
Related to: #12

--- a/src/main/resources/templates/loginPage.html
+++ b/src/main/resources/templates/loginPage.html
@@ -24,7 +24,7 @@
           <div class="row gy-3 gy-md-4 overflow-hidden">
             <div class="col-12">
               <label for="userId" class="form-label">아이디</label>
-              <input type="text" class="form-control" name="userId" id="userId" required>
+              <input type="text" class="form-control" name="username" id="userId" required>
             </div>
             <div class="col-12">
               <label for="password" class="form-label">비밀번호</label>
