--- a/src/main/resources/templates/updateForm.html
+++ b/src/main/resources/templates/updateForm.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>게시판 서비스</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
 </head>
 <body>
 <div th:replace="~{header::header}">
@@ -12,12 +18,20 @@
 
 </div>
 <div class="container">
-    <form th:action="|@{/posts/{postId}/update(postId=${post.id})}|" method="post">
-        <input class="form-control" placeholder="제목을 입력하세요." id="title" name="title" required th:value="${post.title}"/>
-    <br>
+    <form th:action th:object="${post}" method="post">
+        <input class="form-control" id="title" th:field="*{title}"
+               th:errorclass="field-error" th:value="${post.title}"/>
+        <div class="field-error" th:errors="*{title}">
+            제목 공백 오류
+        </div>
+        <br>
     <label for="content">내용</label>
-        <textarea class="form-control" placeholder="내용을 입력하세요." id="content" name="content" style="height: 300px; resize: none" required th:text="${post.content}"></textarea>
-    <br>
+        <textarea class="form-control"  id="content" th:field="*{content}"
+                  th:errorclass="field-error" style="height: 300px; resize: none" th:text="${post.content}"></textarea>
+        <div class="field-error" th:errors="*{content}">
+            내용 공백 오류
+        </div>
+        <br>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
         <input type="submit" class="btn btn-primary position-relative" value="글 수정"/>
     </div>
