--- a/src/main/resources/templates/joinPage.html
+++ b/src/main/resources/templates/joinPage.html
@@ -23,8 +23,8 @@
                 <form action="/join" method="post">
                     <div class="row gy-3 gy-md-4 overflow-hidden">
                         <div class="col-12">
-                            <label for="userId" class="form-label">아이디</label>
-                            <input type="text" class="form-control" name="userId" id="userId" required>
+                            <label for="username" class="form-label">아이디</label>
+                            <input type="text" class="form-control" name="username" id="username" required>
                         </div>
                         <div class="col-12">
                             <label for="password" class="form-label">비밀번호</label>
