--- a/src/main/resources/templates/updateForm.html
+++ b/src/main/resources/templates/updateForm.html
@@ -19,11 +19,12 @@
 </div>
 <div class="container">
     <form th:action th:object="${post}" method="post">
-        <input class="form-control" id="title" th:field="*{title}"
+        <label for="title">제목</label><input class="form-control" id="title" th:field="*{title}"
                th:errorclass="field-error" th:value="${post.title}"/>
         <div class="field-error" th:errors="*{title}">
             제목 공백 오류
         </div>
+        <label for="writer">작성자</label><input class="form-control"  id="writer" th:value="${#authentication.name}" readonly/>
         <br>
     <label for="content">내용</label>
         <textarea class="form-control"  id="content" th:field="*{content}"
